[package]
name = "weirdboi_bevy_colour"
version = "0.3.0-rc.1"
edition = "2024"
description = "Colour palettes for Bevy, with macros for compile-time palette definitions."
license = "Apache-2.0"
authors = [
    "Louis Capitanchik <louis@weirdboi.com>"
]
repository = "https://weirdboi.dev/libraries/bevy-colours"
homepage = "https://weirdboi.dev/libraries/bevy-colours"

[workspace]
members = ["macros"]

[dependencies]
macros = { package = "weirdboi_bevy_colour_macros", path = "macros", version = "0.1.0" }
bevy = { version = "0.18.0-rc.1", default-features = false, features = ["bevy_color"] }
