[package]
name = "bevy-color-palettes"
version = "0.3.2-alpha.1"
edition = "2024"
description = "Color palettes for Bevy and egui, with macros for compile-time palette definitions, based on weirdboi_bevy_colour."
license = "Apache-2.0"
authors = [
    "Louis Capitanchik <louis@weirdboi.com>",
    "Amy Gilhespy <amyogilhespy@gmail.com>",
]
repository = "https://github.com/AmyGilhespy/bevy-color-palettes"
homepage = "https://weirdboi.dev/libraries/bevy-colours"

[workspace]
members = ["macros"]

[dependencies]
#Note to self: comment out the macros dependency while and just while publishing macros!
macros = { package = "bevy-color-macros", version = "0.2.0-alpha.1" }
bevy = { version = "0.18.0", optional = true, default-features = false, features = [
    "bevy_color",
] }
egui = { version = "0.33.3", optional = true, default-features = false }
thiserror = { version = "2.0.18", optional = true, default-features = false }

[features]
default = []
bevy = ["dep:bevy"]
egui = ["dep:egui"]
parse = ["dep:thiserror"]
